# mykare-voice-agent-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  mykare.db  mykare_voice_ai_engineer_task.md  pyproject.toml  railway.toml  test_backend.db
alembic/: env.py
alembic/versions/: 20260428_0001_initial_schema.py
app/: __init__.py  main.py
app/agent/: __init__.py  prompts.py  state.py  tools.py  worker.py
app/api/: deps.py  router.py
app/api/routes/: health.py  sessions.py  tools.py
app/core/: config.py  errors.py
app/db/: session.py
app/models/: __init__.py  appointment.py  conversation.py  enums.py  mixins.py  user.py
app/schemas/: appointments.py  common.py  sessions.py
app/services/: appointments.py  events.py  livekit.py  sessions.py  slots.py  summaries.py  users.py
app/tests/: conftest.py  test_api.py
